tests/ui/privacy/private-inferred-type-1.stderr
error: type `Priv` is private
  --> $DIR/private-inferred-type-1.rs:16:5
   |
LL |     [].arr0_secret();
   |     ^^^^^^^^^^^^^^^^ private type

error: type `Priv` is private
  --> $DIR/private-inferred-type-1.rs:17:5
   |
LL |     None.ty_param_secret();
   |     ^^^^^^^^^^^^^^^^^^^^^^ private type

error: aborting due to 2 previous errors

